src/components/menu/_menu.scss
.menu-button {
    border: none;
    display:block;
    background: white;
    font-size: 18px;
    width: 100%;
    padding: 18px;
    text-decoration: none;
    text-align: center;
    box-sizing: border-box;
    &:hover {
        background-color: $hover-state-color;
        color: $accent-color;
    }
}

.profile-menu {
    margin: 0;
    list-style: none;
    padding: 50px 0 0;
}

.profile-nav {
    background: white;
    display: block;
    position: absolute;
    top: 0;
    z-index: $z-index-2;
    width: 100%;
}

